# pvr.dvr.hdhomerun

./: .gitignore  CMakeLists.txt  Findcurl.cmake  Findsqlite.cmake  Finduuid.cmake  msbuild.proj
pvr.dvr.hdhomerun/: addon.xml.in
pvr.hdhomerundvr/: addon.xml.in  changelog.txt
src/: addon.xml.tt  pvr.cpp  string_exception.h  uwp.vcxproj  uwp.vcxproj.filters  version.h  windows.vcxproj  windows.vcxproj.filters
